# PrivEsc-Intelligence-Platform

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pip.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: index.md
pip/analysis/: correlation_graph.py  gtfobins.py  knowledge_base.py  mitre_mapper.py
pip/api/: auth.py  server.py
pip/core/: context_engine.py  orchestrator.py  plugin.py  shell_compat.py  stealth_engine.py
pip/decision/: decision_engine.py  exploit_runner.py
pip/enum/: cloud_container.py  credential_intel.py  lateral_awareness.py  smart_enum.py
pip/models/: attack_path.py  context.py  finding.py
pip/reporting/: blue_team.py  executive.py  technical.py
pip/scoring/: exploit_validator.py  fp_reducer.py  learning_engine.py  risk_scorer.py
plugins/cloud/: aws_imds_harvest.py
plugins/correlation/: service_account_chain.py
plugins/enum/: example_custom_check.py
plugins/exploit/: cron_injection.py
tests/: conftest.py  test_core.py  test_integration.py  test_models.py  test_scoring.py
